--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -133,9 +133,9 @@
                 justify-content: center;
                 cursor: pointer;
             }
-
+           
             &:hover{
-                background: var(--PrimaryColor);
+                background: rgb(124, 212, 245);
             }
 
             .icon{
